--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(jamharah STATIC
     src/index_format.c
     src/normalize_arabic.c
     src/tokenize_arabic.c
+    src/hash.c
 )
 
 target_include_directories(jamharah
@@ -18,6 +19,7 @@ target_include_directories(jamharah
 
 find_package(SQLite3 REQUIRED)
 
+
 add_executable(build_from_sqlite
     src/build_from_sqlite.c
 )
@@ -26,6 +28,69 @@ target_link_libraries(build_from_sqlite
     PRIVATE
         jamharah
         SQLite::SQLite3
+)
+
+add_executable(build_occurrences
+    src/build_occurrences.c
+)
+
+target_link_libraries(build_occurrences
+    PRIVATE
+        jamharah
+)
+
+add_executable(sort_occurrences
+    src/sort_occurrences.c
+)
+
+target_link_libraries(sort_occurrences
+    PRIVATE
+        jamharah
+)
+
+add_executable(build_postings
+    src/build_postings.c
+)
+
+target_link_libraries(build_postings
+    PRIVATE
+        jamharah
+)
+
+add_executable(build_words_index
+    src/build_words_index.c
+)
+
+target_link_libraries(build_words_index
+    PRIVATE
+        jamharah
+)
+
+add_executable(search_core
+    src/search_core.c
+)
+
+target_link_libraries(search_core
+    PRIVATE
+        jamharah
+)
+
+add_executable(dump_postings_blocks
+    src/dump_postings_blocks.c
+)
+
+target_link_libraries(dump_postings_blocks
+    PRIVATE
+        jamharah
+)
+
+add_executable(build_index_pipeline
+    src/build_index_pipeline.c
+)
+
+target_link_libraries(build_index_pipeline
+    PRIVATE
+        jamharah
 )
 
 enable_testing()
